--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,10 +11,11 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-18.04, ubuntu-20.04, macos-10.15, windows-2016, windows-2019]
+    runs-on: ${{ matrix.os }}
+    continue-on-error: true
 
     steps:
       - uses: actions/checkout@v2
