Only store 1 artifact for Windows and Linux each

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,7 @@ jobs:
 
       - name: Archive artifacts
         uses: actions/upload-artifact@v2
+        if: ${{ matrix.os == 'ubuntu-18.04' || matrix.os == 'macOS-10.15' || matrix.os == 'windows-2016' }}
         with:
           name: MNE-Python
           path: |
