--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,14 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-18.04, ubuntu-20.04, macos-10.15, windows-2016, windows-2019]
+
     runs-on: ${{ matrix.os }}
+
     continue-on-error: true
+
+    concurrency: 
+      group: ${{ github.head_ref }}
+      cancel-in-progress: true
 
     steps:
       - uses: actions/checkout@v2
