--- a/recipes/mne-python_0.23/construct.yaml
+++ b/recipes/mne-python_0.23/construct.yaml
@@ -1,14 +1,20 @@
 name: MNE-Python
-version: 0.23.0-2021.1
+version: 0.23.0_installer-2021.1
 company: MNE-Python Developers
 
 environment_file: mne-python_0.23.0_env.yml
-installer_type: all
 license_file: ../../LICENSE
 
 initialize_by_default: False
 register_python_default: False
-uninstall_name: ${NAME} ${VERSION} (Python ${PYVERSION})
+default_prefix: ${HOME}/mne-python/0.23.0         # [unix]
+default_prefix: ${USERPROFILE}\mne-python\0.23.0  # [win]
+uninstall_name: MNE-Python 0.23.0 (${VERSION}, Python ${PYVERSION})
+
+installer_type: pkg  # [osx]
+installer_filename: MNE-Python-0.23.0_installer-2021.1-macOS.pkg    # [osx]
+installer_filename: MNE-Python-0.23.0_installer-2021.1-Windows.exe  # [win]
+installer_filename: MNE-Python-0.23.0_installer-2021.1-Linux.sh     # [linux]
 
 channels:
 - conda-forge
