Use conda activate

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,14 +44,6 @@ jobs:
         run: |
           constructor recipes/mne-python_0.23
 
-      # - name: Archive artifacts
-      #   if: ${{ matrix.os == 'ubuntu-18.04' || matrix.os == 'macOS-10.15' || matrix.os == 'windows-2016' }}
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: MNE-Python
-      #     path: |
-      #       MNE-Python-*.*
-
       - name: Run installer (macOS)
         if: ${{ runner.os == 'macOS' }}
         shell: bash -l {0}
@@ -75,4 +67,12 @@ jobs:
         if: ${{ runner.os == 'Linux' }}
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: source ~/mne-python/0.23.0/bin/activate && mne sys_info
+          run: conda activate ~/mne-python/0.23.0 && mne sys_info
+
+      # - name: Archive artifacts
+      #   if: ${{ matrix.os == 'ubuntu-18.04' || matrix.os == 'macOS-10.15' || matrix.os == 'windows-2016' }}
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: MNE-Python
+      #     path: |
+      #       MNE-Python-*.*
