--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,9 +19,9 @@ jobs:
 
     continue-on-error: true
 
-    concurrency: 
-      group: ${{ github.head_ref }}
-      cancel-in-progress: true
+    # concurrency: 
+    #   group: ${{ github.head_ref }}
+    #   cancel-in-progress: true
 
     steps:
       - uses: actions/checkout@v2
