--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ name: Build the installers
 on:
   push:
     branches: [ main ]
+    tags:
+    - '*'
   pull_request:
     branches: [ main ]
 
@@ -79,9 +81,10 @@ jobs:
       #       MNE-Python-*.*
 
       - name: Release
-        uses: softprops/action-gh-release@v1
-        if: ${{ startsWith(github.ref, 'refs/tags/') && (matrix.os == 'ubuntu-18.04' || matrix.os == 'macOS-10.15' || matrix.os == 'windows-2016') }}
+        if: ${{ matrix.os == 'ubuntu-18.04' || matrix.os == 'macOS-10.15' || matrix.os == 'windows-2016' }}
+        uses: ncipollo/release-action@v1
         with:
-          files: MNE-Python-*installer*.*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          artifacts: "MNE-Python-*installer*.*"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          draft: true
+          prerelease: true
