Add allowUpdates flag to update existing releases

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,3 +88,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           draft: true
           prerelease: true
+          allowUpdates: true
