--- a/recipes/mne-python_0.24/construct.yaml
+++ b/recipes/mne-python_0.24/construct.yaml
@@ -17,8 +17,6 @@ installer_filename: MNE-Python-0.24.1_installer-2021.2-Windows.exe  # [win]
 installer_filename: MNE-Python-0.24.1_installer-2021.2-Linux.sh     # [linux]
 
 condarc:
-  channels:
-    - conda-forge
-  default_channels:
-    - conda-forge
+  channels: "conda-forge"
+  default_channels: "conda-forge"
   env_prompt: (mne-0.24.1)
