--- a/recipes/mne-python_0.24/construct.yaml
+++ b/recipes/mne-python_0.24/construct.yaml
@@ -17,9 +17,11 @@ installer_filename: MNE-Python-0.24.1_installer-2021.2-Windows.exe  # [win]
 installer_filename: MNE-Python-0.24.1_installer-2021.2-Linux.sh     # [linux]
 
 channels:
-- conda-forge
+  - conda-forge
 
-conda_default_channels:
-- conda-forge
-
-write_condarc: True
+condarc:
+  channels:
+    - conda-forge
+  default_channels:
+    - conda-forge
+  env_prompt: (mne-0.24.1)
