Revert "Disable everything after Mamba setup"
This reverts commit 9c19123a88060573fbe40813f67df4d286e5d633.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,51 +34,51 @@ jobs:
           environment-file: environment.yml
           micromamba-version: latest
 
-      # - name: Build installer
-      #   shell: bash -l {0}
-      #   run: |
-      #     constructor recipes/mne-python_0.24
+      - name: Build installer
+        shell: bash -l {0}
+        run: |
+          constructor recipes/mne-python_0.24
 
-      # - name: Run installer (macOS)
-      #   if: ${{ runner.os == 'macOS' }}
-      #   shell: bash -l {0}
-      #   run: |
-      #     installer -pkg MNE-Python-0.24.1_installer-2021.2-macOS.pkg -target CurrentUserHomeDirectory
+      - name: Run installer (macOS)
+        if: ${{ runner.os == 'macOS' }}
+        shell: bash -l {0}
+        run: |
+          installer -pkg MNE-Python-0.24.1_installer-2021.2-macOS.pkg -target CurrentUserHomeDirectory
 
-      # - name: Run installer (Linux)
-      #   if: ${{ runner.os == 'Linux' }}
-      #   shell: bash -l {0}
-      #   run: |
-      #     sh ./MNE-Python-0.24.1_installer-2021.2-Linux.sh -b
+      - name: Run installer (Linux)
+        if: ${{ runner.os == 'Linux' }}
+        shell: bash -l {0}
+        run: |
+          sh ./MNE-Python-0.24.1_installer-2021.2-Linux.sh -b
 
-      # - name: Check installation (macOS)
-      #   if: ${{ runner.os == 'macOS' }}
-      #   shell: bash -l {0}
-      #   run: |
-      #     source ~/mne-python/bin/activate
-      #     mne sys_info
+      - name: Check installation (macOS)
+        if: ${{ runner.os == 'macOS' }}
+        shell: bash -l {0}
+        run: |
+          source ~/mne-python/bin/activate
+          mne sys_info
 
-      # - name: Check installation (Linux)
-      #   if: ${{ runner.os == 'Linux' }}
-      #   run: |
-      #     sudo apt-get install -y xvfb
-      #     source ~/mne-python/0.24.1/bin/activate
-      #     xvfb-run mne sys_info
+      - name: Check installation (Linux)
+        if: ${{ runner.os == 'Linux' }}
+        run: |
+          sudo apt-get install -y xvfb
+          source ~/mne-python/0.24.1/bin/activate
+          xvfb-run mne sys_info
 
-      # # - name: Archive artifacts
-      # #   if: ${{ matrix.os == 'ubuntu-18.04' || matrix.os == 'macOS-10.15' || matrix.os == 'windows-2016' }}
-      # #   uses: actions/upload-artifact@v2
-      # #   with:
-      # #     name: MNE-Python
-      # #     path: |
-      # #       MNE-Python-*.*
-
-      # - name: Release
+      # - name: Archive artifacts
       #   if: ${{ matrix.os == 'ubuntu-18.04' || matrix.os == 'macOS-10.15' || matrix.os == 'windows-2016' }}
-      #   uses: ncipollo/release-action@v1
+      #   uses: actions/upload-artifact@v2
       #   with:
-      #     artifacts: "MNE-Python-*installer*.*"
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     draft: true
-      #     prerelease: true
-      #     allowUpdates: true
+      #     name: MNE-Python
+      #     path: |
+      #       MNE-Python-*.*
+
+      - name: Release
+        if: ${{ matrix.os == 'ubuntu-18.04' || matrix.os == 'macOS-10.15' || matrix.os == 'windows-2016' }}
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "MNE-Python-*installer*.*"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          draft: true
+          prerelease: true
+          allowUpdates: true
