--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,8 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-18.04, ubuntu-20.04, macos-10.15, macos-11, windows-2019, windows-2022]
+        # os: [ubuntu-18.04, ubuntu-20.04, macos-10.15, macos-11, windows-2019, windows-2022]
+        os: [windows-2019, windows-2022]
 
     runs-on: ${{ matrix.os }}
 
@@ -53,7 +54,7 @@ jobs:
       - name: Run installer (Windows)
         if: ${{ runner.os == 'Windows' }}
         run: |
-          MNE-Python-0.24.1_installer-2021.2-Windows.exe /S /D=%UserProfile%\mne-python
+          .\MNE-Python-0.24.1_installer-2021.2-Windows.exe /S /D=%UserProfile%\mne-python
 
       - name: Check installation (macOS)
         if: ${{ runner.os == 'macOS' }}
