--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Check installation (Windows)
         if: ${{ runner.os == 'Windows' }}
         run: |
-          "$env:UserProfile\mne-python\condabin\conda.bat" init
+          "$env:UserProfile\mne-python\condabin\conda.bat init"
           conda info
           mne sys_info
 
