--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,8 +74,7 @@ jobs:
       - name: Check installation (Windows)
         if: ${{ runner.os == 'Windows' }}
         run: |
-          "$env:UserProfile\mne-python\condabin\conda.bat init"
-          conda info
+          "$env:UserProfile\mne-python\bin\activate"
           mne sys_info
 
       # - name: Archive artifacts
