--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,9 +73,8 @@ jobs:
 
       - name: Check installation (Windows)
         if: ${{ runner.os == 'Windows' }}
-        shell: pwsh -ExecutionPolicy ByPass -NoExit -Command ". {0}"
         run: |
-          "$env:UserProfile\mne-python\shell\condabin\conda-hook.ps1"
+          Invoke-Expression "$env:UserProfile\mne-python\shell\condabin\conda-hook.ps1"
           "conda activate $env:UserProfile\mne-python"
           conda info
           mne sys_info
