--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,7 +75,7 @@ jobs:
         if: ${{ runner.os == 'Windows' }}
         run: |
           $MneRoot = "$env:UserProfile\mne-python"
-          (& "$MneRoot\bin\conda.exe" "shell.powershell" "hook") | Out-String | Invoke-Expression
+          . "$env:UserProfile\mne-python\shell\condabin\conda-hook.ps1"
           "conda activate $MneRoot"
           conda info
           mne sys_info
