--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,9 +75,9 @@ jobs:
         if: ${{ runner.os == 'Windows' }}
         run: |
           $MneRoot = "$env:UserProfile\mne-python"
-          "$MneRoot shell\condabin\conda-hook.ps1"
-          & "$MneRoot shell\condabin\conda-hook.ps1"
-          . "$MneRoot shell\condabin\conda-hook.ps1"
+          "$MneRoot\shell\condabin\conda-hook.ps1"
+          & "$MneRoot\shell\condabin\conda-hook.ps1"
+          . "$MneRoot\shell\condabin\conda-hook.ps1"
           "conda activate $MneRoot"
           conda info
           mne sys_info
