--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,6 +76,10 @@ jobs:
         run: |
           $MneRoot = "$env:UserProfile\mne-python"
           Get-ChildItem -Recurse "$MneRoot\shell"
+
+      - name: Check installation (Windows, rest)
+        if: ${{ runner.os == 'Windows' }}
+        run: |
           "$MneRoot\shell\condabin\conda-hook.ps1"
           & "$MneRoot\shell\condabin\conda-hook.ps1"
           . "$MneRoot\shell\condabin\conda-hook.ps1"
