--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,7 +75,7 @@ jobs:
         if: ${{ runner.os == 'Windows' }}
         run: |
           $MneRoot = "$env:UserProfile\mne-python"
-          Get-ChildItem -Recurse "$env:UserProfile\mne-python\shell\"
+          Get-ChildItem -path "$MneRoot\shell" -Recurse
 
       - name: Check installation (Windows, rest)
         if: ${{ runner.os == 'Windows' }}
