--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Run installer (Windows)
         if: ${{ runner.os == 'Windows' }}
         run: |
-          .\MNE-Python-0.24.1_installer-2021.2-Windows.exe /S /D="$env:UserProfile\mne-python"
+          .\MNE-Python-0.24.1_installer-2021.2-Windows.exe /S /D=C:\mne-python
 
       - name: Check installation (macOS)
         if: ${{ runner.os == 'macOS' }}
@@ -74,8 +74,8 @@ jobs:
       - name: Check installation (Windows)
         if: ${{ runner.os == 'Windows' }}
         run: |
-          $MneRoot = "$env:UserProfile\mne-python"
-          Get-ChildItem -path "$env:UserProfile\mne-python" -Recurse
+          $MneRoot = "C:\mne-python"
+          Get-ChildItem -path "C:\mne-python" -Recurse
 
       - name: Check installation (Windows, rest)
         if: ${{ runner.os == 'Windows' }}
