--- a/recipes/mne-python_0.24/mne-python_0.24.1_env.yml
+++ b/recipes/mne-python_0.24/mne-python_0.24.1_env.yml
@@ -6,9 +6,9 @@ channels:
 dependencies:
 # - mne-base ==0.24.1
 # - mne-bids ==0.9
-- python ==3.9
+# - python ==3.9
 # - pip
-# - conda
+- conda
 # - mamba
 # - jupyter
 # - jupyterlab
