--- a/recipes/mne-python_0.24/mne-python_0.24.1_env.yml
+++ b/recipes/mne-python_0.24/mne-python_0.24.1_env.yml
@@ -9,7 +9,7 @@ dependencies:
 # - python ==3.9
 # - pip
 - conda
-- console_shortcut  # [win]
+- miniforge_console_shortcut  # [win]
 # - mamba
 # - jupyter
 # - jupyterlab
