--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,7 @@ jobs:
       # https://docs.anaconda.com/anaconda/install/silent-mode.html
       - name: Run installer (Windows)
         if: ${{ runner.os == 'Windows' }}
+        shell: cmd
         run: |
           .\MNE-Python-0.24.1_installer-2021.2-Windows.exe /S /InstallationType=AllUsers /D=C:\mne-python
 
