--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,12 +80,9 @@ jobs:
 
       - name: Check installation (Windows, rest)
         if: ${{ runner.os == 'Windows' }}
+        shell: cmd
         run: |
-          $MneRoot = ""$env:UserProfile\mne-python""
-          "$MneRoot\shell\condabin\conda-hook.ps1"
-          & "$MneRoot\shell\condabin\conda-hook.ps1"
-          . "$MneRoot\shell\condabin\conda-hook.ps1"
-          "conda activate $MneRoot"
+          conda activate %UserProfile%\mne-python
           conda info
           mne sys_info
 
