--- a/recipes/mne-python_0.24/mne-python_0.24.1_env.yml
+++ b/recipes/mne-python_0.24/mne-python_0.24.1_env.yml
@@ -4,10 +4,10 @@ channels:
 - conda-forge
 
 dependencies:
-# - mne-base ==0.24.1
+- mne-base ==0.24.1
 # - mne-bids ==0.9
-# - python ==3.9
-# - pip
+- python ==3.9
+- pip
 - conda
 - miniforge_console_shortcut  # [win]
 # - mamba
