--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,6 +74,9 @@ jobs:
       - name: Check installation (Windows)
         if: ${{ runner.os == 'Windows' }}
         run: |
+          git clone --depth 1 git://github.com/pyvista/gl-ci-helpers.git
+          ./gl-ci-helpers/appveyor/install_opengl.ps1
+
           $MneRoot = "$env:UserProfile\mne-python"
           . "$MneRoot\shell\condabin\conda-hook.ps1"
           conda activate $MneRoot
