--- a/environment.yml
+++ b/environment.yml
@@ -4,4 +4,8 @@ channels:
 - conda-forge
 
 dependencies:
-- constructor
+ - constructor
+# https://github.com/conda/constructor/pull/477
+ - pip
+ - pip:
+   - https://github.com/conda/constructor/archive/refs/heads/fix-env-mode.zip
