Fix release action … again!

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,8 +96,7 @@ jobs:
 
       - name: Release
         if: |
-          github.ref_name == 'main' &&
-          github.ref_type == 'branch' &&
+          github.ref_type == 'tag' &&
           (matrix.os == 'ubuntu-18.04' || matrix.os == 'macOS-10.15' || matrix.os == 'windows-2019')
         uses: ncipollo/release-action@v1
         with:
